--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends":"@dtjv/tsconfig",
+  "extends": "@dtjv/tsconfig",
+  "include": ["src"],
   "compilerOptions": {
-    "lib": ["dom", "ES2020"],
+    "lib": ["ES2020"],
     "outDir": "dist"
   }
 }
