--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "description": "An implementation of sm-2 algorithm",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "format": "prettier --write .",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "npm run build",
+    "example": "npm run build && node dist/example.js"
   },
   "keywords": [],
   "author": "David J. Valles <davidtjvalles@gmail.com>",
