--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@dtjv/tsconfig",
-  "include": ["src"],
+  "files": ["src/index.ts", "example.ts"],
   "compilerOptions": {
-    "lib": ["ES2020"],
+    "lib": ["dom", "ES2020"],
     "outDir": "dist"
   }
 }
