Fix sm2 and example build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@dtjv/tsconfig",
-  "files": ["src/index.ts", "example.ts"],
+  "include": ["src"],
   "compilerOptions": {
     "lib": ["dom", "ES2020"],
     "outDir": "dist"
