--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "format": "prettier --write .",
-    "build": "tsc",
+    "build": "del-cli dist && tsc",
     "prepublishOnly": "npm run build",
-    "example": "npm run build && node dist/example.js"
+    "example": "npm run build && tsc example.ts --outDir dist && node dist/example.js"
   },
   "keywords": [],
   "author": "David J. Valles <davidtjvalles@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@dtjv/tsconfig": "0.1.1",
+    "del-cli": "3.0.1",
     "prettier": "2.2.1",
     "typescript": "4.1.3"
   }
