--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "scripts": {
     "format": "prettier --write .",
     "lint": "xo",
+    "test": "tap",
     "build": "del-cli dist && tsc",
     "prepublishOnly": "npm run build",
-    "example": "npm run build && tsc example.ts --outDir dist && node dist/example.js"
+    "postinstall": "npm run build",
+    "example": "tsc example.ts --outDir dist && node dist/example.js"
   },
   "keywords": [],
   "author": "David J. Valles <davidtjvalles@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@dtjv/tsconfig": "0.1.1",
+    "@types/tap": "14.10.1",
     "del-cli": "3.0.1",
     "prettier": "2.2.1",
+    "tap": "14.11.0",
     "typescript": "4.1.3",
     "xo": "0.37.1"
   },
