--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dtjv/sm-2",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "An implementation of sm-2 algorithm",
   "author": "David J. Valles <davidtjvalles@gmail.com>",
   "keywords": [
@@ -26,17 +26,15 @@
     "lint": "xo",
     "test": "tap",
     "build": "del-cli dist && tsc",
-    "prepublishOnly": "npm run build",
-    "postinstall": "npm run build",
-    "example": "tsc example.ts --outDir dist && node dist/example.js"
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@types/tap": "14.10.2",
     "@dtjv/tsconfig": "0.1.1",
-    "@types/tap": "14.10.1",
     "del-cli": "3.0.1",
     "prettier": "2.2.1",
     "tap": "14.11.0",
-    "typescript": "4.1.3",
+    "typescript": "4.1.5",
     "xo": "0.37.1"
   },
   "xo": {
