--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@types/tap": "14.10.2",
     "@dtjv/tsconfig": "0.1.1",
+    "@types/tap": "14.10.2",
     "del-cli": "3.0.1",
+    "eslint-config-xo-typescript": "0.37.0",
     "prettier": "2.2.1",
     "tap": "14.11.0",
     "typescript": "4.1.5",
