--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
   "scripts": {
     "format": "prettier --write .",
     "lint": "xo",
-    "test": "tap",
+    "test": "tap --ts",
     "build": "del-cli dist && tsc",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@dtjv/tsconfig": "0.1.1",
-    "@types/tap": "14.10.2",
-    "del-cli": "3.0.1",
-    "eslint-config-xo-typescript": "0.37.0",
-    "prettier": "2.2.1",
-    "tap": "14.11.0",
-    "typescript": "4.1.5",
-    "xo": "0.37.1"
+    "@types/tap": "15.0.5",
+    "del-cli": "4.0.1",
+    "eslint-config-xo-typescript": "0.44.0",
+    "prettier": "2.3.2",
+    "tap": "15.0.9",
+    "ts-node": "10.2.0",
+    "typescript": "4.3.5",
+    "xo": "0.44.0"
   },
   "xo": {
     "prettier": true,
