--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,21 @@
+# dependencies
 node_modules
-dist
+
+# test output
 coverage
 .nyc_output
+
+# lock files
 yarn.lock
 package-lock.json
+
+# build
+dist
+
+# misc
+.DS_Store
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
