--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dtjv/sm-2",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "An implementation of sm-2 algorithm",
   "author": "David J. Valles <davidtjvalles@gmail.com>",
   "keywords": [
@@ -25,6 +25,7 @@
     "format": "prettier --write .",
     "lint": "xo",
     "test": "tap --ts",
+    "type-check": "tsc --pretty --noEmit --project tsconfig.xo.json",
     "build": "del-cli dist && tsc",
     "prepublishOnly": "npm run build"
   },
